--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular-gauge-chart": "0.7.2",
     "bootstrap": "^5.3.0-alpha3",
+    "d3": "^7.8.4",
     "ngx-bootstrap": "^10.2.0",
     "ngx-echarts": "^15.0.3",
     "primeng": "^15.3.0",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
