--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0-alpha3",
+    "chart.js": "^4.2.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-echarts": "^15.0.3",
     "primeng": "^15.3.0",
