--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-gauge-chart": "0.7.2",
     "bootstrap": "^5.3.0-alpha3",
     "d3": "^7.8.4",
+    "chart.js": "^4.2.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-echarts": "^15.0.3",
     "primeng": "^15.3.0",
