--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0-alpha3",
-    "d3": "^7.8.4",
     "chart.js": "^4.2.1",
+    "d3": "^7.8.4",
+    "echarts": "^5.4.2",
     "ngx-bootstrap": "^10.2.0",
     "ngx-echarts": "^15.0.3",
     "primeng": "^15.3.0",
