--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.2.1",
     "d3": "^7.8.4",
     "echarts": "^5.4.2",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^10.2.0",
     "ngx-echarts": "^15.0.3",
     "primeng": "^15.3.0",
